# apeoplescalendar-cli

./: Cargo.toml
src/: main.rs
